--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
         <h1>Generate a <br><span>Random Password</span></h1>
         <div class="display">
             <input type="text" id="password" placeholder="Password">
-            <img src="/images/copy.png" onclick="copyPassword" >
+            <img src="images/copy.png" onclick="copyPassword" >
+            
         </div>
         <button onclick="createPassword()">
-            <img src="/images/generate.png">Generate Password
+          <img src="images/generate.png" alt="">Generate Password
         </button>
     </div>
 
